<resources>
    <string name="app_name">武隆交通</string>

    <!-- 通用的-->
    <string name="common_copyright">\u00a9 2019 All Rights Reserved</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="common_login">登录</string>
    <string name="common_reset_pwd">重置密码</string>
    <string name="common_check_phone">手机号验证</string>
    <string name="common_input_phone">请输入手机号</string>
    <string name="common_input_account">请输入账号</string>
    <string name="common_input_pwd">请输入密码</string>
    <string name="common_input_new_pwd">请输入新密码</string>
    <string name="common_input_new_pwd_again">请再次输入新密码</string>
    <string name="common_login_forget">忘记密码？</string>
    <string name="common_get_check_code">获取验证码</string>
    <string name="common_input_code_verify">输入验证码</string>
    <string name="common_confirm">确定</string>
    <string name="common_text_change">修改</string>
    <string name="common_text_logout">退出登录</string>
    <string name="common_view_full">查看全部</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <!-- Http-->
    <string name="frame_name">AndroidOHP</string>

    <!-- 提示-->
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>

    <!-- 本地异常捕捉-->
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>
    <string name="crash_error_restart">重新启动</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_error_log">错误日志</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_error_details">错误详情</string>
    <string name="crash_close">关闭</string>

    <!--  App 内的String-->
    <string name="index_home">首页</string>
    <string name="index_msg">消息</string>
    <string name="index_mine">我的</string>
    <string name="project_word_download">下载</string>
    <string name="project_word_preview">预览</string>
    <string name="item_total_change_money">累计变更金额(万元)</string>
    <string name="item_super_money">超概金额(万元)</string>
    <string name="view_the_full_text">查看全文</string>
    <string name="item_deduction_item">扣分项</string>
    <string name="item_note">备注</string>
    <string name="item_update_time">更新时间</string>
    <string name="plan_manager_notify">前期通知书</string>
    <string name="plan_manager_item_name">项目名称</string>
    <string name="plan_manager_start_end">起止地点</string>
    <string name="plan_manager_constract_scale">建设规模</string>
    <string name="plan_manager_order">计划下达</string>
    <string name="plan_manager_constract_content">建设内容</string>
    <string name="plan_manager_investment_scale">投资规模</string>
    <string name="salary_manager_user_funds">转入专户资金</string>
    <string name="salary_manager_output_statement">每月产值表</string>
    <string name="salary_manager_salary_schedule">农民工工资表</string>
    <string name="tender_has_complaints">有投诉</string>
    <string name="tender_question">质疑</string>
    <string name="tender_answer">答复</string>
    <string name="pay_detail_values">支付金额</string>
    <string name="farmers_contrant">合同附件</string>

</resources>
