<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/activity_action"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/common_reset_pwd"
        android:textColor="@color/colorWord"
        android:textSize="30sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp" />

    <com.rainwood.tools.view.PasswordEditText
        android:id="@+id/et_new_pwd"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/common_input_new_pwd"
        android:maxLength="20"
        android:maxLines="1" />

    <View style="@style/HorizontalLineStyle"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <com.rainwood.tools.view.PasswordEditText
        android:id="@+id/et_new_pwd_again"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/common_input_new_pwd_again"
        android:maxLength="20"
        android:maxLines="1" />

    <View style="@style/HorizontalLineStyle"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_reset_confirm"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/common_login"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

</LinearLayout>