<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/split_line" />

    <View
        android:id="@+id/split_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black15"
        android:layout_above="@+id/tabs_rg" />
    <RadioGroup
        android:id="@+id/tabs_rg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_tab"
            style="@style/Custom.TabRadioButton"
            android:checked="true"
            android:drawableTop="@drawable/tab_sign_selector"
            android:text="@string/index_home" />

        <RadioButton
            android:id="@+id/message_tab"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/tab_record_selector"
            android:text="@string/index_msg" />

        <RadioButton
            android:id="@+id/personal_tab"
            style="@style/Custom.TabRadioButton"
            android:drawableTop="@drawable/tab_setting_selector"
            android:text="@string/index_mine" />
    </RadioGroup>

</RelativeLayout>