<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_action"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_check_phone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/common_check_phone"
        android:textColor="@color/colorWord"
        android:textSize="30sp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />

    <com.rainwood.tools.view.ClearEditText
        android:id="@+id/et_check_phone"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:hint="@string/common_input_phone"
        android:inputType="textVisiblePassword"
        android:singleLine="true"
        app:regexType="mobile" />

    <View style="@style/HorizontalLineStyle"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_get_code"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/common_get_check_code" />

</LinearLayout>