<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan_manager_notify"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/plan_manager_item_name"
        android:textColor="@color/colorLabel"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/textColor"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/plan_manager_start_end"
        android:textColor="@color/colorLabel"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/shape_circle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_start_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorCircle11"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_solid_circle" />

    <View
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_solid_circle" />

    <View
        android:layout_width="2dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_solid_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/shape_circle_end" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_end_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/plan_manager_constract_scale"
        android:textColor="@color/colorLabel"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_construction_scale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_construction_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWord"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_query_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/view_the_full_text"
            android:textColor="@color/colorAccent" />
    </LinearLayout>


</LinearLayout>