<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_record_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_record_time_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorLabel"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tv_record_time_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:textColor="@color/colorLabel"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:id="@+id/ll_record_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_record_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="record"
            android:textColor="@color/colorWord"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_record_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/view_the_full_text"
            android:textColor="@color/colorBlue1"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_expert_word_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/colorLabel"
            android:textSize="14sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_expert_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="13dp"
                android:layout_height="14dp"
                android:background="@drawable/ic_icon_download" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/project_word_download"
                android:textColor="@color/colorLabel"
                android:textSize="13sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_expert_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="13dp"
                android:layout_height="14dp"
                android:background="@drawable/ic_icon_see" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/project_word_preview"
                android:textColor="@color/colorLabel"
                android:textSize="13sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>